Adds hangman card

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             <h1 class="projects-title">Projects</h1>
         <div class="project-container">
           <div class="box habit-card">
-            <h2 class="habit-title">HabitTracker <i class="fas fa-calendar-week" aria-hidden="true"></i> </h2>
+            <h2 class="habit-title card-title">HabitTracker  <img src="public/images/icons8-calendar.svg"></h2>
           </div>
           <div class="box park-card">
-            <h2 class="parkadvisor-title">ParkAdvisor <i class="fas fa-tree"></i> </h1>
+            <h2 class="parkadvisor-title card-title">ParkAdvisor <i class="fas fa-tree"></i> </h1>
           </div>
-          <div class="box project-item">
-            <h2 class="project-title">HabitTracker <i class="fas fa-calendar-week" aria-hidden="true"></i></h2>
+          <div class="box hangman-card">
+            <h2 class="hangman-title card-title">Hangman <img id="hang" src="public/images/icons8-pivot-animator.svg"></h2>
           </div>
         </div>
     </div>
