Makes skills section responsive

--- a/index.html
+++ b/index.html
@@ -48,31 +48,36 @@
     <div class="col-md-12 secondDiv">
       <h1 class="section-title">Skills</h1>
       <div class="skills-container">
-        <div class="front-end tech">
-          <h1 class="tech-title">Front End</h1>
-          <div class="front-end-items item-container">
-            <span class="tech-item"><img src="public/images/icons8-html-5.svg"/> HTML 5 </span>
-            <span><img src="public/images/icons8-css3.svg"/> CSS </span>
-            <span><img src="public/images/icons8-javascript.svg"/> Javascript</span>
-            <span><img src="public/images/icons8-django.svg"/> Django </span>
+        <div class="row">
+
+            <div class="front-end tech">
+              <h1 class="tech-title">Front End</h1>
+              <div class="front-end-items item-container">
+                <span class="tech-item"><img src="public/images/icons8-html-5.svg"/> HTML 5 </span>
+                <span><img src="public/images/icons8-css3.svg"/> CSS </span>
+                <span><img src="public/images/icons8-javascript.svg"/> Javascript</span>
+                <span><img src="public/images/icons8-django.svg"/> Django </span>
+              </div>
+            </div>
+
+          <div class="server tech">
+            <h1 class="tech-title">Server</h1>
+            <div class="server-items item-container">
+              <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
+              <span><img src="public/images/icons8-css3.svg"/> Express </span>
+              <span><img src="public/images/icons8-django.svg"/> Django </span>
+            </div>
           </div>
-        </div>
-        <div class="server tech">
-          <h1 class="tech-title">Server</h1>
-          <div class="server-items item-container">
-            <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
-            <span><img src="public/images/icons8-css3.svg"/> Express </span>
-            <span><img src="public/images/icons8-django.svg"/> Django </span>
+          
+          <div class="database tech">
+            <h1 class="tech-title">Database</h1>
+            <div class="server-items item-container">
+              <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
+              <span><img src="public/images/icons8-css3.svg"/> Express </span>
+              <span><img src="public/images/icons8-django.svg"/> Django </span>
+            </div>
           </div>
-        </div>
-        
-        <div class="database tech">
-          <h1 class="tech-title">Database</h1>
-          <div class="server-items item-container">
-            <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
-            <span><img src="public/images/icons8-css3.svg"/> Express </span>
-            <span><img src="public/images/icons8-django.svg"/> Django </span>
-          </div>
+
         </div>
       </div>
     </div>
@@ -80,18 +85,31 @@
         <h1 class="projects-title">Projects</h1>
     </div>
     <div class="col-md-12 fourthDiv">
-            <h1 class="projects-title">Projects</h1>
-        <div class="project-container">
-          <div class="box habit-card">
-            <h2 class="habit-title card-title">HabitTracker  <img src="public/images/icons8-calendar.svg"></h2>
+        <h1 class="projects-title">Projects</h1>
+        <div class="row">
+            <div class="project-container">
+              <div class="box habit-card">
+                <h2 class="habit-title card-title">HabitTracker <i class="fas fa-calendar-week"></i></h2>
+              </div>
+              <div class="box park-card">
+                <h2 class="parkadvisor-title card-title">ParkAdvisor <i class="fas fa-tree"></i> </h1>
+              </div>
+              <div class="box hangman-card">
+                <h2 class="hangman-title card-title">Hangman<img id="hang" src="public/images/icons8-pivot-animator.svg"></h2>
+              </div>
+            </div>
+            <div class="project-container">
+            <div class="box game-card">
+                <h2 class="habit-title card-title">Game-informant <i class="fas fa-gamepad"></i></h2>
+              </div>
+              <div class="box roommate-card">
+                <h2 class="habit-title card-title">RoommateCalc <i class="fas fa-calculator"></i></h2>
+              </div>
+              <div class="box book-card">
+                <h2 class="habit-title card-title">BookSearch <i class="fas fa-book"></i></h2>
+              </div>
+            </div>
           </div>
-          <div class="box park-card">
-            <h2 class="parkadvisor-title card-title">ParkAdvisor <i class="fas fa-tree"></i> </h1>
-          </div>
-          <div class="box hangman-card">
-            <h2 class="hangman-title card-title">Hangman <img id="hang" src="public/images/icons8-pivot-animator.svg"></h2>
-          </div>
-        </div>
     </div>
   </div>
 
