--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/c4410df193.js" crossorigin="anonymous"></script>
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet"> 
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!-- JS, Popper.js, and jQuery -->
@@ -78,37 +79,77 @@
             </div>
           </div>
 
+          <div class="programming-lang tech">
+            <h1 class="tech-title">Programming Languages</h1>
+            <div class="server-items item-container">
+              <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
+              <span><img src="public/images/icons8-css3.svg"/> Express </span>
+              <span><img src="public/images/icons8-django.svg"/> Django </span>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
     <div class="col-md-12 thirdDiv">
-        <h1 class="projects-title">Projects</h1>
+        <h1 class="projects-title">About Me</h1>
+        <p>Full-Stack Engineer who loves designing and coding user friendly programs that solve real world problems to make people’s lives easier. I’m eager to learn new languages and techniques along my journey as a software engineer.</p>
     </div>
     <div class="col-md-12 fourthDiv">
         <h1 class="projects-title">Projects</h1>
-        <div class="row">
-            <div class="project-container">
-              <div class="box habit-card">
-                <h2 class="habit-title card-title">HabitTracker <i class="fas fa-calendar-week"></i></h2>
+        <div class="project-cont">
+            <div class="row">
+                        <div class="box habit-card col-md-3">
+                          <h2 class="habit-title card-title">HabitTracker <i class="fas fa-calendar-week"></i></h2>
+                          <div class="card-description">
+                            <p class="img__description">Track your habits, whether good or bad and see your progress visually using the calendar UI!</p>
+                            <a href="https://github.com/ajay-k/HabitTracker">Github Repo Link</a>
+                            <a href="https://habittrackerchain.herokuapp.com/habits/">Live Demo</a>
+                          </div>
+                        </div>
+
+                        <div class="box park-card col-md-3">
+                          <h2 class="parkadvisor-title habit-title card-title">ParkAdvisor <i class="fas fa-tree"></i> </h1>
+                          <div class="card-description">
+                            <p class="img__description">Explore US National Parks! Users can add reviews to share and rate their park experiences.</p>
+                            <a href="https://github.com/lauragsack/ParkAdvisor">Github Repo Link</a>
+                            <a href="http://park-advisor.herokuapp.com">Live Demo</a>
+                          </div>
+                        </div>
+
+                        <div class="box hangman-card col-md-3">
+                          <h2 class="hangman-title habit-title card-title">Hangman<img id="hang" src="public/images/icons8-pivot-animator.svg"></h2>
+                          <div class="card-description">
+                            <p class="img__description">Generates a random word for the user to solve. The user guesses letters to solve the word using the keyboard displayed on screen. </p>
+                            <a href="https://github.com/ajay-k/hangman">Github Repo Link</a>
+                            <a href="https://ajay-k.github.io/hangman/">Live Demo</a>
+                          </div>
+                        </div>
+
+                      <div class="box game-card col-md-3">
+                          <h2 class="habit-title card-title">Game-informant <i class="fas fa-gamepad"></i></h2>
+                          <div class="card-description">
+                            <p class="img__description">Shows relevant information pertaining to a game and allows users to see trending games or search for specific games and add them to their favorites collection.</p>
+                            <a href="https://github.com/jakerjohnson21/game-informant">Github Repo Link</a>
+                          </div>
+                      </div>
+
+                      <div class="box roommate-card col-md-3">
+                          <h2 class="habit-title card-title">RoommateCalc <i class="fas fa-calculator"></i></h2>
+                          <div class="card-description">
+                            <p class="img__description">Calculate roommate's monthly rent quickly and send valuable information to rommates on iOS!</p>
+                            <a href="https://github.com/ajay-k/RoommateCalculator">Github Repo Link</a>
+                          </div>
+                      </div>
+                      
+                      <div class="box book-card col-md-3">
+                        <h2 class="habit-title card-title">BookSearch <i class="fas fa-book"></i></h2>
+                          <div class="card-description">
+                            <p class="img__description">iOS app which using's Apple's Itunes API to grab data for book information</p>
+                            <a href="https://github.com/ajay-k/BookSearch">Github Repo Link</a>
+                          </div>
+                      </div>
               </div>
-              <div class="box park-card">
-                <h2 class="parkadvisor-title card-title">ParkAdvisor <i class="fas fa-tree"></i> </h1>
-              </div>
-              <div class="box hangman-card">
-                <h2 class="hangman-title card-title">Hangman<img id="hang" src="public/images/icons8-pivot-animator.svg"></h2>
-              </div>
-            </div>
-            <div class="project-container">
-            <div class="box game-card">
-                <h2 class="habit-title card-title">Game-informant <i class="fas fa-gamepad"></i></h2>
-              </div>
-              <div class="box roommate-card">
-                <h2 class="habit-title card-title">RoommateCalc <i class="fas fa-calculator"></i></h2>
-              </div>
-              <div class="box book-card">
-                <h2 class="habit-title card-title">BookSearch <i class="fas fa-book"></i></h2>
-              </div>
-            </div>
           </div>
     </div>
   </div>
