--- a/resume.html
+++ b/resume.html
@@ -21,14 +21,14 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="index.html">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
           <a class="nav-link" href="index.html#Projects">Projects</a>
@@ -51,13 +51,14 @@
     </nav>
   </header>
 
+  <div class="container-fluid">
+    <div class="resume-container">
+          <object data="resume/KumarAjayResume.pdf" type="application/pdf" width="100%" height="100%">
+          <a href="/resumeKumarAjayResume.pdf">test.pdf</a>
+          </object>
 
-  <div class="resume-container">
-        <object data="resume/KumarAjayResume.pdf" type="application/pdf" width="100%" height="100%">
-        <a href="/resumeKumarAjayResume.pdf">test.pdf</a>
-        </object>
-
-        
+          
+    </div>
   </div>
   
 </body>
