--- a/index.html
+++ b/index.html
@@ -58,49 +58,71 @@
       <div class="skills-container">
         <div class="row">
 
-            <div class="front-end tech">
-              <h1 class="tech-title">Front End</h1>
-              <div class="front-end-items item-container">
-                <span class="tech-item"><img src="public/images/icons8-html-5.svg"/> HTML 5 </span>
-                <span><img src="public/images/icons8-css3.svg"/> CSS </span>
-                <span><img src="public/images/icons8-javascript.svg"/> Javascript</span>
-                <span><img src="public/images/icons8-django.svg"/> Django </span>
+          <div>
+            <img class="tech-image" src="public/images/front-end.svg"/>
+              <div class="front-end tech">
+                <h1 class="tech-title">Front End</h1>
+                <div class="front-end-items item-container">
+                  <span class="tech-item"><img src="public/images/icons8-html-5.svg"/> HTML 5 </span>
+                  <span><img src="public/images/icons8-css3.svg"/> CSS </span>
+                  <span><img src="public/images/icons8-javascript.svg"/> Javascript</span>
+                  <span><img src="public/images/icons8-django.svg"/> Django </span>
+                  <span><img src="public/images/icons8-react-native.svg"/> React </span>
+                </div>
               </div>
-            </div>
+          </div>
 
+         <div>
+            <img class="tech-image" src="public/images/database.svg"/>
           <div class="server tech">
             <h1 class="tech-title">Server</h1>
             <div class="server-items item-container">
               <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
               <span><img src="public/images/icons8-css3.svg"/> Express </span>
-              <span><img src="public/images/icons8-django.svg"/> Django </span>
+              <span><img src="public/images/icons8-python.svg"/> Python </span>
+              <span><img src="public/images/icons8-php-logo.svg"/> PHP </span>
             </div>
           </div>
+        </div>
           
+        <div>
+            <img class="tech-image" src="public/images/server.svg"/>
           <div class="database tech">
             <h1 class="tech-title">Database</h1>
             <div class="server-items item-container">
-              <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
-              <span><img src="public/images/icons8-css3.svg"/> Express </span>
-              <span><img src="public/images/icons8-django.svg"/> Django </span>
+              <span><img src="public/images/icons8-postgresql.svg"/> PostgreSQL </span>
+              <span><img src="public/images/icons8-mongodb.svg"/> MongoDB </span>
+              <span><img src="public/images/mongoose1.png"/ width="48px" height="30px"> Mongoose </span>
             </div>
           </div>
+        </div>
 
+        <div>
+            <img class="tech-image" src="public/images/coding.svg"/>
           <div class="programming-lang tech">
-            <h1 class="tech-title">Programming Languages</h1>
+            <h1 class="tech-title">Languages</h1>
             <div class="server-items item-container">
-              <span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span>
-              <span><img src="public/images/icons8-css3.svg"/> Express </span>
-              <span><img src="public/images/icons8-django.svg"/> Django </span>
+              <span><img src="public/images/icons8-python.svg"/> Python </span>
+              <span><img src="public/images/icons8-c++.svg"/> C++ </span>
+              <span><img src="public/images/icons8-swift.svg"/> Swift </span>
+              <span><img src="public/images/icons8-java.svg"/> Java </span>
+              <span><img src="public/images/prolog.svg"/> Prolog </span>
             </div>
           </div>
+        </div>
 
         </div>
       </div>
     </div>
     <div class="col-md-12 thirdDiv" id="AboutMe">
-        <h1 class="projects-title">About Me</h1>
-        <p>Full-Stack Engineer who loves designing and coding user friendly programs that solve real world problems to make people’s lives easier. I’m eager to learn new languages and techniques along my journey as a software engineer.</p>
+        <div class="about-me-container">
+            <h1 class="projects-title">About Me</h1>
+            <p class="about-me-description"> I graduated from UC Davis with a degree in computer science. After working in other industries,
+                I decided to dive back into my passion of coding and enrolled in GA boot camp where I knew it was the industry for me! 
+                I loved coding and solving problems, I found myself always thinking and trying to find the most efficient was to solve a problem.
+                During my time at GA I loved working with team members to create a fully functionally and responsive site that had a great user interface! 
+            </p>
+        </div>
     </div>
     <div class="col-md-12 fourthDiv" id="Projects">
         <h1 class="section-title">Projects</h1>
