--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">AK</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -117,11 +117,14 @@
     <div class="col-md-12 thirdDiv" id="AboutMe">
         <div class="about-me-container">
             <h1 class="projects-title">About Me</h1>
+            <div class="about-me-info">
+            <img src="public/images/programmer.svg" width="248px" height="248px">
             <p class="about-me-description"> I graduated from UC Davis with a degree in computer science. After working in other industries,
                 I decided to dive back into my passion of coding and enrolled in GA boot camp where I knew it was the industry for me! 
                 I loved coding and solving problems, I found myself always thinking and trying to find the most efficient was to solve a problem.
                 During my time at GA I loved working with team members to create a fully functionally and responsive site that had a great user interface! 
             </p>
+            </div>
         </div>
     </div>
     <div class="col-md-12 fourthDiv" id="Projects">
@@ -132,8 +135,8 @@
                           <h2 class="habit-title card-title">HabitTracker <i class="fas fa-calendar-week"></i></h2>
                           <div class="card-description">
                             <p class="img__description">Track your habits, whether good or bad and see your progress visually using the calendar UI!</p>
-                            <a href="https://github.com/ajay-k/HabitTracker">Github Repo Link</a>
-                            <a href="https://habittrackerchain.herokuapp.com/habits/">Live Demo</a>
+                            <a href="https://github.com/ajay-k/HabitTracker" target="_blank">Github Repo Link</a>
+                            <a href="https://habittrackerchain.herokuapp.com/habits/ target="_blank"">Live Demo</a>
                           </div>
                         </div>
 
@@ -141,8 +144,8 @@
                           <h2 class="parkadvisor-title habit-title card-title">ParkAdvisor <i class="fas fa-tree"></i> </h1>
                           <div class="card-description">
                             <p class="img__description">Explore US National Parks! Users can add reviews to share and rate their park experiences.</p>
-                            <a href="https://github.com/lauragsack/ParkAdvisor">Github Repo Link</a>
-                            <a href="http://park-advisor.herokuapp.com">Live Demo</a>
+                            <a href="https://github.com/lauragsack/ParkAdvisor" target="_blank">Github Repo Link</a>
+                            <a href="http://park-advisor.herokuapp.com" target="_blank">Live Demo</a>
                           </div>
                         </div>
 
@@ -150,8 +153,8 @@
                           <h2 class="hangman-title habit-title card-title">Hangman<img id="hang" src="public/images/icons8-pivot-animator.svg"></h2>
                           <div class="card-description">
                             <p class="img__description">Generates a random word for the user to solve. The user guesses letters to solve the word using the keyboard displayed on screen. </p>
-                            <a href="https://github.com/ajay-k/hangman">Github Repo Link</a>
-                            <a href="https://ajay-k.github.io/hangman/">Live Demo</a>
+                            <a href="https://github.com/ajay-k/hangman" target="_blank">Github Repo Link</a>
+                            <a href="https://ajay-k.github.io/hangman/" target="_blank">Live Demo</a>
                           </div>
                         </div>
 
@@ -159,7 +162,7 @@
                           <h2 class="habit-title card-title">Game-informant <i class="fas fa-gamepad"></i></h2>
                           <div class="card-description">
                             <p class="img__description">Shows relevant information pertaining to a game and allows users to see trending games or search for specific games and add them to their favorites collection.</p>
-                            <a href="https://github.com/jakerjohnson21/game-informant">Github Repo Link</a>
+                            <a href="https://github.com/jakerjohnson21/game-informant" target="_blank">Github Repo Link</a>
                           </div>
                       </div>
 
@@ -167,7 +170,7 @@
                           <h2 class="habit-title card-title">RoommateCalc <i class="fas fa-calculator"></i></h2>
                           <div class="card-description">
                             <p class="img__description">Calculate roommate's monthly rent quickly and send valuable information to rommates on iOS!</p>
-                            <a href="https://github.com/ajay-k/RoommateCalculator">Github Repo Link</a>
+                            <a href="https://github.com/ajay-k/RoommateCalculator" target="_blank">Github Repo Link</a>
                           </div>
                       </div>
                       
@@ -175,7 +178,7 @@
                         <h2 class="habit-title card-title">BookSearch <i class="fas fa-book"></i></h2>
                           <div class="card-description">
                             <p class="img__description">iOS app which using's Apple's Itunes API to grab data for book information</p>
-                            <a href="https://github.com/ajay-k/BookSearch">Github Repo Link</a>
+                            <a href="https://github.com/ajay-k/BookSearch" target="_blank">Github Repo Link</a>
                           </div>
                       </div>
               </div>
@@ -208,7 +211,7 @@
       
         <div class="footer-content row">
             <div class="top-row">
-                <a href="https://github.com/ajay-k"> Github |</a><a href="http://linkedin.com/in/ajay-ku/"> LinkedIn |</a> <a href="resume.html">Resume</a>
+                <a href="https://github.com/ajay-k" target="_blank"> Github |</a><a href="http://linkedin.com/in/ajay-ku/" target="_blank"> LinkedIn |</a> <a href="resume.html" target="_blank">Resume</a>
             </div>
             <div class="bottom-row">
                 <p>
