--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="resume.html">Resume</a>
+            <a class="nav-link" href="resume.html" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
   <div class="container-fluid">
     <div class="resume-container">
           <object data="resume/KumarAjayResume.pdf" type="application/pdf" width="100%" height="100%">
-          <a href="/resumeKumarAjayResume.pdf">test.pdf</a>
+          <a href="/resumeKumarAjayResume.pdf" target="_blank">Resume.pdf</a>
           </object>
 
           
