Adds button to landing page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
   <div class="container-fluid">
     <div class="col-md-12 firstDiv">
       <h1>Hello I'm Ajay</h1>
+      <h1>I'm a <span id="job-title">Full Stack Software Developer</span></h1>
+      <a href="#Projects"><button type="button" class="btn-lg btn-primary projects-btn">View Projects </button></a>
     </div>
     <div class="col-md-12 secondDiv" id="Skills">
       <h1 class="section-title">Skills</h1>
