Fixes chrome bugs

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-   
+ 
   <link rel="stylesheet" href="public/styles/main.css">
-  <title>Ajay's Portfolio</title>
+  <title>Ajay Kumar | Full Stack Software Engineer</title>
 </head>
 <body>
   <header>
@@ -60,7 +60,7 @@
       <div class="skills-container">
         <div class="row">
 
-          <div>
+          <div class="tech-items-container">
             <img class="tech-image" src="public/images/front-end.svg"/>
               <div class="front-end tech">
                 <h1 class="tech-title">Front End</h1>
@@ -74,7 +74,7 @@
               </div>
           </div>
 
-         <div>
+         <div class="tech-items-container">
             <img class="tech-image" src="public/images/database.svg"/>
           <div class="server tech">
             <h1 class="tech-title">Server</h1>
@@ -87,7 +87,7 @@
           </div>
         </div>
           
-        <div>
+        <div class="tech-items-container">
             <img class="tech-image" src="public/images/server.svg"/>
           <div class="database tech">
             <h1 class="tech-title">Database</h1>
@@ -99,7 +99,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="tech-items-container">
             <img class="tech-image" src="public/images/coding.svg"/>
           <div class="programming-lang tech">
             <h1 class="tech-title">Languages</h1>
