--- a/resume.html
+++ b/resume.html
@@ -15,13 +15,13 @@
    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
    
   <link rel="stylesheet" href="public/styles/main.css">
-  <title>Resume</title>
+  <title>Ajay Kumar | Full Stack Software Engineer</title>
 </head>
 <body>
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Navbar</a>
+      <a class="navbar-brand" href="index.html">AK</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
