--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/c4410df193.js" crossorigin="anonymous"></script>
-   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet"> 
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!-- JS, Popper.js, and jQuery -->
@@ -12,6 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+   
  
   <link rel="stylesheet" href="public/styles/main.css">
   <title>Ajay Kumar | Full Stack Software Engineer</title>
@@ -73,7 +76,7 @@
         </div>
 
         <div class="row Skills">
-          <div class="boxOne col-md-5">
+          <div class="boxOne col-md-6">
             <h3>Here are a few technologies I've been working with recently:</h3>
 
             <div class="row row1">
@@ -119,12 +122,65 @@
                   <h4 class="card-title"><span><img src="public/images/icons8-mongodb.svg"/> MongoDB </span></h4>
                 </div>
               </div>
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><img src="public/images/icons8-swift.svg"/> Swift </span></h4>
+                </div>
+              </div>
             </div>
 
 
           </div> 
-          <div class="boxTwo col-md-5">
-            <h3>I also have expereince in:</h3>
+          <div class="boxTwo col-md-6">
+            <h3>I also have expereince with ¬</h3>
+
+            <div class="row row1">
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><span><img src="public/images/icons8-nodejs.svg"/> NodeJS </span></h4>
+                </div>
+              </div>
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><img src="public/images/icons8-css3.svg"/> Express </span></h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="row row2">
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"> <span><img src="public/images/icons8-php-logo.svg"/> PHP </span></h4>
+                </div>
+              </div>
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><img src="public/images/icons8-postgresql.svg"/> PostgreSQL </span></h4>
+                </div>
+              </div>
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><img src="public/images/mongoose1.png" width="48px" height="30px"/> Mongoose </span></h4>
+                </div>
+              </div>
+            </div>
+            <div class="row row3">
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><img src="public/images/icons8-c++.svg"/> C++ </span></h4>
+                </div>
+              </div>
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><img src="public/images/icons8-java.svg"/> Java </span></h4>
+                </div>
+              </div>
+              <div class="card skillsCard">
+                <div class="card-body">
+                  <h4 class="card-title"><span><img src="public/images/prolog.svg"/> Prolog </span></h4>
+                </div>
+              </div>
+            </div>
 
           </div>
 
