--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">AK</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span><i class="fas fa-bars"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -79,7 +79,7 @@
          
         </div>
 
-        <div class="row Skills">
+        <div class="row Skills" id="Skills">
           <div class="boxOne col-md-6">
             <h3>Here are a few technologies I've been working with recently:</h3>
             <div class="row row1">
@@ -184,7 +184,7 @@
 
         </div>
 
-        <div class="row Projects col-md-12">
+        <div class="row Projects col-md-12" id="Projects">
           <h1>Projects</h1>
           <div class="row project-boxes">
             <div class="box habit-card col-md-3">
