--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="57x57" href="public/images/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="public/images/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="public/images/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="public/images/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="public/images/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="public/images/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="public/images/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="public/images/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="public/images/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="public/images/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="public/images/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <script src="https://kit.fontawesome.com/c4410df193.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet"> 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -31,7 +48,7 @@
 <body>
   <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">AK</a>
+      <a class="navbar-brand" href="#"><img src="public/images/logo.svg" class="img-fluid" alt="logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fas fa-bars"></i></span>
       </button>
@@ -39,6 +56,9 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#AboutMe">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Projects">Projects</a>
@@ -59,7 +79,7 @@
   </header>
 
 
-        <div class="row AboutMe">
+        <div class="row AboutMe" id="AboutMe">
           <div class="col-md-4 avatar">
                  <img id="self-img"class="rounded-circle img-fluid shadow p-2 mb-5 bg-white" alt="100x100" src="https://media-exp1.licdn.com/dms/image/C5603AQEw4I6TrmUyYg/profile-displayphoto-shrink_800_800/0/1585710665485?e=1617840000&v=beta&t=RW22vMTTircQrCBxkvpemRRxvr9oIsdZAO2ZxgKiayQ"
                   data-holder-rendered="true">
@@ -77,9 +97,9 @@
             </p>
           </div>
 
-          <div class="row scroll-down"> 
-            <i class="fas fa-chevron-down animate__animated animate__bounce animate__infinite animate__delay-2s"></i>
-          </div>         
+          <div class="row arrow bounce">
+            <a class="far fa-arrow-alt-circle-down fa-2x" href="#"></a>
+          </div>      
         </div>
 
         <div class="row Skills" id="Skills">
@@ -190,7 +210,7 @@
         <div class="row Projects col-md-12" id="Projects">
           <h1>Projects</h1>
           <div class="row project-boxes">
-            <div class="box habit-card col-md-3 animate__animated animate__pulse animate__infinite animate__slow">
+            <div class="box habit-card col-md-3">
               <h2 class="habit-title card-title">HabitTracker <i class="fas fa-calendar-week"></i></h2>
               <div class="card-description">
                 <p class="img__description">Track your habits, whether good or bad and see your progress visually using the calendar UI!</p>
@@ -236,7 +256,7 @@
               <div class="box book-card col-md-3">
                 <h2 class="habit-title card-title">BookSearch <i class="fas fa-book"></i></h2>
                   <div class="card-description">
-                    <p class="img__description">iOS app which using's Apple's Itunes API to grab data for book information</p>
+                    <p class="img__description">iOS app which uses Apple's Itunes API to grab data for book information</p>
                     <a href="https://github.com/ajay-k/BookSearch" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
               </div>
@@ -244,9 +264,9 @@
          
         </div>
 
-        <div class="row ContactMeForm">
-          <h1>Let's Connect!</h1>
+        <div class="row ContactMeForm" id="ContactMe">
           <div class="contact-form container">
+            <h1>Let's Connect!</h1>
             <form id="contact-form" action="https://formspree.io/xqkyppor" method="POST">
   
                 <input  class="form-control form-color col-md-6" name="name" type="text" placeholder="Name">
@@ -277,10 +297,13 @@
               </div>
               <div class="bottom-row">
                   <p>
-                    Design by Ajay Kumar |
+                    Design by Ajay Kumar
                   </p>
                   <p>
-                  Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+                    |
+                  </p>
+                  <p>
+                    Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
                   </p>
               </div>
           </div>
