--- a/resume.html
+++ b/resume.html
@@ -20,10 +20,10 @@
 <body>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">AK</a>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#">AK</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span><i class="fas fa-bars"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -31,20 +31,17 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="index.html#Projects">Projects</a>
+            <a class="nav-link" href="index.html#Projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html#Skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#AboutMe">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html#ContactMe">Contact</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="resume.html" target="_blank">Resume</a>
+            <a class="nav-link" href="resume.html">Resume</a>
           </li>
         </ul>
       </div>
