Fixes logo size

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#"><img src="public/images/logo.svg" class="img-fluid" alt="logo"/></a>
+      <a class="navbar-brand" href="#"><img src="public/images/logo.svg" class="logo img-fluid" alt="logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fas fa-bars"></i></span>
       </button>
