--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
   </header>
 
-
+    
         <div class="row AboutMe" id="AboutMe">
           <div class="col-md-4 avatar">
                  <img id="self-img"class="rounded-circle img-fluid shadow p-2 mb-5 bg-white" alt="100x100" src="https://media-exp1.licdn.com/dms/image/C5603AQEw4I6TrmUyYg/profile-displayphoto-shrink_800_800/0/1585710665485?e=1617840000&v=beta&t=RW22vMTTircQrCBxkvpemRRxvr9oIsdZAO2ZxgKiayQ"
@@ -94,6 +94,8 @@
               myself always thinking and trying to find the most efficient way to 
               solve a problem. During my time at GA I loved working with team members to 
               create a fully functionally and responsive site that had a great user interface!
+            </p>
+            <p class="message-read animate__animated animate__fadeIn animate__delay-1s animate__slower">
             </p>
           </div>
 
