--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     
         <div class="row AboutMe" id="AboutMe">
           <div class="col-md-4 avatar">
-                 <img id="self-img"class="rounded-circle img-fluid shadow p-2 mb-5 bg-white" alt="100x100" src="https://media-exp1.licdn.com/dms/image/C5603AQEw4I6TrmUyYg/profile-displayphoto-shrink_800_800/0/1585710665485?e=1617840000&v=beta&t=RW22vMTTircQrCBxkvpemRRxvr9oIsdZAO2ZxgKiayQ"
+                 <img id="self-img"class="rounded-circle img-fluid shadow p-2 mb-5 bg-white" alt="100x100" src="public/images/avatar.jpg"
                   data-holder-rendered="true">
           </div>
 
