--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,600&display=swap" rel="stylesheet">   
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!-- JS, Popper.js, and jQuery -->
@@ -87,7 +89,7 @@
 
           <div class="col-md-6 aboutText">
             <p class="speech-bubble">
-              I graduated from UC Davis with a degree in computer science. 
+              Hello my name is Ajay, I graduated from UC Davis with a degree in computer science. 
               After working in other industries, I decided to dive back into my 
               passion of coding and enrolled in GA boot camp where I knew it was 
               the industry for me! I loved coding and solving problems, I found 
