--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <div class="card-description">
                 <p class="img__description">Track your habits, whether good or bad and see your progress visually using the calendar UI!</p>
                 <a href="https://github.com/ajay-k/HabitTracker" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://habittrackerchain.herokuapp.com/habits/" target="_blank><i class="fas fa-external-link-alt"></i></a>
+                <a href="https://habittrackerchain.herokuapp.com/habits/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
               </div>
             </div>
 
